--- a/vue/package.json
+++ b/vue/package.json
@@ -13,6 +13,7 @@
     "lint:fix": "eslint --ext .js,.vue src --fix"
   },
   "dependencies": {
+    "attachmediastream": "^2.1.0",
     "crypto-js": "^3.1.9-1",
     "debounce": "^1.2.0",
     "nextcloud-axios": "^0.2.1",
@@ -31,6 +32,7 @@
     "@babel/preset-env": "^7.5.5",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-add-module-exports": "^1.0.2",
     "browserslist-config-nextcloud": "0.0.1",
     "css-loader": "^3.2.0",
     "eslint": "^5.16.0",
