--- a/package.json
+++ b/package.json
@@ -10,23 +10,11 @@
   "author": "",
   "license": "AGPL-3.0",
   "scripts": {
-    "build": "make npm-init build-js-production bundle-simplewebrtc"
+    "build": "make npm-init build-js-production"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "attachmediastream": "^2.1.0",
-    "babel-plugin-add-module-exports": "^1.0.2",
-    "babelify": "^10.0.0",
-    "browserify": "^16.5.0",
     "browserslist-config-nextcloud": "0.0.1",
-    "handlebars": "^4.1.2",
-    "hark": "^1.2.3",
-    "mockconsole": "0.0.1",
-    "util": "^0.12.1",
-    "webrtc-adapter": "^7.3.0",
-    "webrtcsupport": "^2.2.0",
-    "wildemitter": "^1.2.1"
+    "handlebars": "^4.1.2"
   },
   "browserslist": [
     "extends browserslist-config-nextcloud"
