--- a/vue/package.json
+++ b/vue/package.json
@@ -16,12 +16,18 @@
     "attachmediastream": "^2.1.0",
     "crypto-js": "^3.1.9-1",
     "debounce": "^1.2.0",
+    "hark": "^1.2.3",
+    "mockconsole": "0.0.1",
     "nextcloud-axios": "^0.2.1",
     "nextcloud-vue": "^0.12.2",
     "nextcloud-vue-collections": "^0.5.6",
+    "util": "^0.12.1",
     "vue": "^2.6.10",
     "vue-fragment": "^1.5.1",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "webrtc-adapter": "^7.3.0",
+    "webrtcsupport": "^2.2.0",
+    "wildemitter": "^1.2.1"
   },
   "browserslist": [
     "extends browserslist-config-nextcloud"
